re-correction contraste page2

--- a/style.css
+++ b/style.css
@@ -747,6 +747,10 @@ h4 {
     color: #FADFD6!important;
 }
 
+.new-grey {
+    color:#212121;
+}
+
 .btn-atomic-tangerine {
     background: #F3976C;
     color: #424242!important;
